# 13F

./: README.md  settings.json
13f-analyzer/: pyproject.toml
backend/: app.py  downloader.py  parser.py  pyproject.toml
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
