[tool.poetry]
name = "13f-analyzer"
version = "0.1.0"
description = ""
authors = ["Ehsan Shahidi <ehsan.shahidi@seeq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
